--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -26,7 +26,7 @@
         <h5 class="card-title">Pack anniversaire enfant</h5>
         <p class="card-text">
           Des formules clefs en main à une fête plus personnalisée, chez vous ou dans un autre lieu, tout est possible.
-Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi...
+Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi... blalblaaaaaaa
         </p> 		
 
 <p>
@@ -42,9 +42,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales. Vous avez un gourmand ? C’est une graine d’artiste ? 
 	   Le sport, il adore ? Geek un jour, geek toujours ? Il a une âme d’explorateur ? Une vocation scientifique ?… 
 	   Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
-	   Nous vous rencontrons avec votre enfant pour connaître ses goûts, votre budget, le nombre d’invités et pour définir vos besoins (invitations, animations, décorations, gâteaux, etc).
-	   Le jour-J nous coordonnons et gérons l’anniversaire : installation et déroulement (animation-gâteau-décoration).
-	   <br>Prix : A partir de 300 € </div>
+	   <br>Prix : A partir de 300 €. Pack disponible pour 5 et 10 personnes.</div>
 </div>
 								
       </div>
@@ -74,7 +72,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 <div class="collapse" id="collapseExample2">
   <div class="card m-2 p-3 text-justify">
    vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle), la durée (sur un week-end, une soirée), et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
-       <br>  Prix : Nous consulter</div>
+       <br>  Prix : Nous consulter. Pack disponible pour 15 et 20 personnes.</div>
 </div>
 
 
@@ -158,8 +156,8 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
-        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1" alt="1">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="1">
       </div>
       <!--Grid column-->
       <!--Grid column-->
@@ -169,7 +167,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2" alt="3">
+        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="3">
       </div>
       <!--Grid column-->
     </div>
@@ -177,18 +175,18 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-12 mb-4">
-        <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3" alt="4">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3-half" alt="4">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4" alt="5">
+        <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4-half" alt="5">
       </div>
       <!--Grid column-->
       <!--Grid column-->
       <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-6.jpg')}}  class="img-fluid z-depth-5" alt="6">
+        <img src={{asset('/images/imagesUpload/img-6.jpg')}}  class="img-fluid z-depth-5-half" alt="6">
       </div>
       <!--Grid column-->
     </div>
