--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -55,8 +55,8 @@
 
       <label class="my-3" for="date">Entre quelles dates désirez-vous réserver ?</label>
       <p>
-        <input type="date" name="date_debut" min={{ resa_min } }="}" max={{ resa_max }>
-        <input type="date" name="date_fin" min={{ resa_min } }="}" max={{ resa_max }></p>
+        <input type="date" name="date_debut" min={{ resa_min }} max={{ resa_max }}>
+        <input type="date" name="date_fin" min={{ resa_min }} max={{ resa_max }}></p>
 
       <button class="btn btn-info mt-4 mb-4" type="submit">Vérifier</button>
 
