--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
         <nav class="d-flex navbar-default navbar-expand-md fixed-top p-3 ">
           <div>
             <a href="/">
-              <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fête un voeu" width="125"></img>
+              <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125"></img>
             </a>
           </div>
           <div>
@@ -64,7 +64,7 @@
           <!-- Collapse button -->
 
           <div class="collapse navbar-collapse container-fluid" id="navbarSupportedContent1">
-            <ul class="navbar-nav w-100 justify-content-md-end" style="background-color:">
+            <ul class="navbar-nav w-100 justify-content-md-end" style="">
               <li class="nav-item active">
                 <a class="nav-link mr-2" href="/">Accueil<span class="sr-only">(current)</span>
                 </a>
