--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -31,7 +31,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
         </p> 		
 
 <p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" href="{{ path('verif_dispo')}}">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -40,8 +40,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card m-2 p-3 text-justify">
-    notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales. Vous avez un gourmand ? C’est une graine d’artiste ? 
-	   Le sport, il adore ? Geek un jour, geek toujours ? Il a une âme d’explorateur ? Une vocation scientifique ?… 
+    notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales. 
 	   Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
 	   <br>Prix : A partir de 300 €. Pack disponible pour 5 et 10 personnes.</div>
 </div>
@@ -63,7 +62,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 		 Fêtes un voeu vous conseille et... 
         </p>
 <p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" href="{{ path('verif_dispo')}}">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
@@ -94,7 +93,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 			</p>
 								
         </p><p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" href="{{ path('verif_dispo')}}">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
@@ -124,7 +123,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
           Vous souhaitez plutôt une soirée classique autour d’un cocktail au rythme d’un rock endiablé ou une soirée à thème qui transforme vos invités en acteurs de l’évènement grâce à une activité collective ou atypique.
 
         </p><p>
-  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="{{ path('verif_dispo')}}" role="button" aria-expanded="false" aria-controls="collapseExample">
+  <a class="btn btn-info shadow m-4" href="{{ path('verif_dispo')}}">
     Réserver
   </a>
   <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
