page paiement + fonction

--- a/templates/paiement.html.twig
+++ b/templates/paiement.html.twig
@@ -28,6 +28,11 @@
 
         {{ form_end(formResa) }}
 
+
+{#        essai modif resa#}
+
+        <a href="{{path('inscription')}}"> <button class="btn btn-info m-2" type="submit">S'inscrire</button></a>
+
     </div>
 </div>
 </div>
