--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -27,7 +27,7 @@
         <h5 class="card-title">Pack anniversaire enfant</h5>
         <p class="card-text">
           Des formules clefs en main à une fête plus personnalisée, chez vous ou dans un autre lieu, tout est possible.
-Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi... blalblaaaaaaa
+Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi... 
         </p> 		
 
 <p>
@@ -40,8 +40,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </p>
 <div class="collapse" id="collapseExample">
   <div class="card m-2 p-3 text-justify">
-    notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales. 
-	   Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
+    notre sélection d’activités. Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
 	   <br>Prix : A partir de 300 €. Pack disponible pour 5 et 10 personnes.</div>
 </div>
 								
@@ -72,7 +71,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 <div class="collapse" id="collapseExample2">
   <div class="card m-2 p-3 text-justify">
    vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle), la durée (sur un week-end, une soirée), et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
-       <br>  Prix : Nous consulter. Pack disponible pour 15 et 20 personnes.</div>
+       <br>  Prix : Nous consulter. Pack disponible pour 10 et 15 personnes.</div>
 </div>
 
 
@@ -105,7 +104,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
   D’ailleurs, souvent les chansons les plus populaires sont le meilleur moyen de permettre à chacun de se lâcher comme il le faut.
 	 Une animation Karaoké pour vos soirées privées avec plus de 44 000 titres disponibles, un book de sélection rapide personnalisable, 4 micros sans fil, une sonorisation professionnelle. 
   Bref, un matériel professionnel de qualité, adapté aux soirées privées. 
-  <br>Prix : à partir de 300€</div>
+  <br>Prix : à partir de 300€. Pack disponible pour 5 et 10 personnes.</div>
 </div>
       </div>
     </div>
@@ -133,7 +132,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 <div class="collapse" id="collapseExample4">
   <div class="card m-2 p-3 text-justify">
   Lieu, traiteur, ambiance musicale, service de sécurité, etc. Nous prenons en charge l’ensemble des prestations (réservation, gestion, coordination, …).
-<br>Prix : Nous consulter</div>
+<br>Prix : Nous consulter. Pack disponible pour 15 et 25 personnes.</div>
 </div>
       </div>
     </div>
@@ -191,7 +190,23 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
       <!--Grid column-->
     </div>
     <!--Grid row-->
-
+<div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="1">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="2">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="3">
+      </div>
+      <!--Grid column-->
+    </div>
 	
   </section>
 
