--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -155,17 +155,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
         <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="1">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4 mb-4">
         <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="2">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
         <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="3">
       </div>
       <!--Grid column-->
@@ -174,17 +174,17 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
     <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
         <img src={{asset('/images/imagesUpload/img-4.jpg')}}  class="img-fluid z-depth-3-half" alt="4">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
         <img src={{asset('/images/imagesUpload/img-5.jpg')}}  class="img-fluid z-depth-4-half" alt="5">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
         <img src={{asset('/images/imagesUpload/img-6.jpg')}}  class="img-fluid z-depth-5-half" alt="6">
       </div>
       <!--Grid column-->
@@ -192,18 +192,18 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     <!--Grid row-->
 <div class="row">
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="1">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
+        <img src={{asset('/images/imagesUpload/img-1.jpg')}} class="img-fluid z-depth-1-half" alt="7">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="2">
+      <div class="col-lg-4 col-md-6 col-xs-4  mb-4">
+        <img src={{asset('/images/imagesUpload/img-2.jpg')}}  class="img-fluid z-depth-1-half" alt="8">
       </div>
       <!--Grid column-->
       <!--Grid column-->
-      <div class="col-lg-4 col-md-6 mb-4">
-        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="3">
+      <div class="col-lg-4 col-md-6 col-xs-4 mb-4">
+        <img src={{asset('/images/imagesUpload/img-3.jpg')}}  class="img-fluid z-depth-2-half" alt="9">
       </div>
       <!--Grid column-->
     </div>
