--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -91,7 +91,7 @@
 
         {{ form_end(formResa) }}
       {% endif %}
-      <a href="{{path('paiement')}}">
+      <a href="">
         <button class="btn btn-danger m-2" type="submit">Paiement</button>
       </a>
 
