--- a/templates/laurence/ajout_pack.html.twig
+++ b/templates/laurence/ajout_pack.html.twig
@@ -1,10 +1,10 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
-<div class="container">
+<div class="container-fluid">
 
 
-    <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #eddcf9">Ajout Pack</h1>
+    <h1 class="text-center mt-2 mb-5 p-4 text-white" style="background-color: #4b1348">Ajout Pack</h1>
 
 
         {% for message in app.flashes('success') %}
