--- a/templates/laurence/gestion_reservations.html.twig
+++ b/templates/laurence/gestion_reservations.html.twig
@@ -1,14 +1,14 @@
 {% extends 'backoffice.html.twig' %}
 
 {% block body %}
-<div class="container">
-    <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #eddcf9">Gestion des réservations</h1>
+<div class="container-fluid">
+    <h1 class="text-center mt-2 mb-2 p-4 text-white" style="background-color: #4b1348">Gestion des réservations</h1>
     {% for message in app.flashes('success') %}
         <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
             {{ message }}
         </div>
     {% endfor %}
-    <div class="row justify-content-end">
+    <div class="row justify-content-start">
         <div class="col-md-3">
             <a class="btn btn-info my-3 mr-2" href="{{ path('verif_dispo') }}">Ajouter une nouvelle réservation</a>
         </div>
