--- a/templates/paiement.html.twig
+++ b/templates/paiement.html.twig
@@ -6,32 +6,59 @@
  <div class="container mt-4">
     <h1 class="text-center p-4" style="background-color: #eddcf9">Paiement</h1>
  
-
-    {#    {% if not app.user %}#}
-    {#        redirection page connexion #}
-    {#        {% else %}#}
-   <hr> 
+ <hr> 
  <div class="container mt-4">
-  <h4 class="text-danger text-center mt-4">PAGE PAIEMENT</h4>
-<h2 class="mt-5">Votre réservation</h2>
-    <div class="w-25 p-4">
-        {{ form_start(formResa) }}
+ <h4 class="text-danger text-center mt-4">PAGE PAIEMENT</h4>
+ <h2 class="mt-5">Votre réservation</h2>
+   </div>
+</div>
 
-        {{ form_row(formResa.date) }}
-        {#            <label for="date">Quelle date :</label>#}
-        {#            <input type="date" name="date">#}
-        {{ form_row(formResa.pack) }}
+<div class="container mt-4">
+    <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #eddcf9">Paiement</h1>
+    {% for message in app.flashes('success') %}
+        <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
+            {{ message }}
+        </div>
+    {% endfor %}
 
-
-        <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
-        {#{% endif %}#}
-
-        {{ form_end(formResa) }}
+    {% for message in app.flashes('danger') %}
+        <div class="col-md-6 bg-danger p-4 rounded mx-auto text-center text-white mb-3">
+            {{ message }}
+        </div>
+    {% endfor %}
+    <div class="row justify-content-end">
 
     </div>
-</div>
-</div>
+    <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+          
+            <th scope="col">Nom</th>
+            <th scope="col">Prénom</th>
+            
+            <th scope="col">Voir Réservations effectuées</th>
+            <th scope="col">Retourner à l'accueil</th>
+        </tr>
+        </thead>
+        <tbody class="text-center">
+        {% for user in users %}
+            <tr>
+               
+                <td>{{ user.nom }}</td>
+                <td>{{ user.prenom }}</td>
+                
+                {#<td>{{ reservation.pack.nom }}</td>#}
 
+                <td><a href="{{ path('resa_client', {'id': user.id }) }}"><img src="{{ asset('images/loupe.png') }}" alt="voir"></a></td>
+                <td><a href="{{ path('/')}}"><img src="{{ asset('images/delete.png') }}" alt="accueil"></a></td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+      <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
+      
+    </div>
 
 
 
