--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
         <nav class="d-flex navbar-default navbar-expand-md fixed-top p-3 ">
           <div>
             <a href="/">
-              <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125"></img>
+              <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125">
             </a>
           </div>
           <div>
