--- a/templates/backoffice.html.twig
+++ b/templates/backoffice.html.twig
@@ -24,14 +24,25 @@
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark"  href="{{ path('gestion_reservations') }}">Réservations</a></li>
             <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark" href="{{ path('gestion_packs') }}">Packs</a></li>
           
-            <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="">Contact</a></li>
+            <li class="nav-item btn btn-light m-3"><a class="nav-link text-dark " href="#">Contact</a></li>
             <li class="nav-item btn btn-light m-3">
                 <a class="nav-link text-dark" href="{{ path('home')}} ">Accueil</a>
             </li>
         </ul>
     </nav>
 
+ <div class="container-fluid p-5">
+            <a href="/">
+              <img src={{asset('images/imagesUpload/logo/logo_fetes_un_voeu.png')}} alt="Logo fêtes un voeu" width="125">
+            </a>
+          </div>
+          <div>
+            <a class="navbar-brand ml-5" style="color:#4b1348" href="/">Fêtes un voeu<br>...au service de vos festivités
+            </a>
+          </div>
 </div>
+
+ 
 
 <div class="col">
 
