--- a/templates/security/inscription.html.twig
+++ b/templates/security/inscription.html.twig
@@ -8,7 +8,7 @@
 
     <h1 class="text-center p-4" style="background-color: #eddcf9">Créer un compte</h1>
            {% else %}
-           <h1>Modifier le profil</h1>
+           <h1 class="text-center p-4" style="background-color: #eddcf9">Modifier le profil</h1>
        {% endif %}
 
 <div  class="col-md-10 mt-5 w-50">
