--- a/templates/paiement.html.twig
+++ b/templates/paiement.html.twig
@@ -8,25 +8,13 @@
  
  <hr> 
  <div class="container mt-4">
- <h4 class="text-danger text-center mt-4">PAGE PAIEMENT</h4>
  <h2 class="mt-5">Votre réservation</h2>
    </div>
 </div>
 
 <div class="container mt-4">
     <h1 class="text-center mt-5 mb-5 p-4" style="background-color: #eddcf9">Paiement</h1>
-    {% for message in app.flashes('success') %}
-        <div class="col-md-6 bg-secondary p-4 rounded mx-auto text-center text-white mb-3">
-            {{ message }}
-        </div>
-    {% endfor %}
-
-    {% for message in app.flashes('danger') %}
-        <div class="col-md-6 bg-danger p-4 rounded mx-auto text-center text-white mb-3">
-            {{ message }}
-        </div>
-    {% endfor %}
-    <div class="row justify-content-end">
+      <div class="row justify-content-end">
 
     </div>
     <table class="table table-striped">
@@ -46,11 +34,7 @@
                
                 <td>{{ user.nom }}</td>
                 <td>{{ user.prenom }}</td>
-                
-                {#<td>{{ reservation.pack.nom }}</td>#}
-
-                <td><a href="{{ path('resa_client', {'id': user.id }) }}"><img src="{{ asset('images/loupe.png') }}" alt="voir"></a></td>
-                <td><a href="{{ path('/')}}"><img src="{{ asset('images/delete.png') }}" alt="accueil"></a></td>
+                 <td><a href=""><img src="{{ asset('images/delete.png') }}" alt="accueil"></a></td>
             </tr>
         {% endfor %}
         </tbody>
@@ -59,9 +43,5 @@
       <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
       
     </div>
-
-
-
-
 
 {% endblock %}
