--- a/templates/laurence/reservation.html.twig
+++ b/templates/laurence/reservation.html.twig
@@ -83,7 +83,7 @@
 
           {{ form_row(formResa.pack) }}
         </div>
-       
+{#    prob git   #}
 
         <button class="btn btn-info m-2" type="submit">Valider</button>
 
