--- a/templates/pagePaiement.html.twig
+++ b/templates/pagePaiement.html.twig
@@ -39,7 +39,7 @@
 {#                    <td><a href="{{ path('resa_client', {'id': user.id }) }}"><img src="{{ asset('images/loupe.png') }}" alt="voir"></a></td>#}
 {#                    <td><a href="{{ path('/')}}"><img src="{{ asset('images/delete.png') }}" alt="accueil"></a></td>#}
                 </tr>
-
+{#je déteste git#}
             </tbody>
         </table>
         <button class="btn btn-info mt-4 mb-4" type="submit">Payer</button>
